@@ -2,10 +2,10 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
-ifeq (,$(findstring a11y,$(DEB_BUILD_OPTIONS)))
-ENABLE_A11Y =
-else
+ifeq (,$(findstring noa11y,$(DEB_BUILD_OPTIONS)))
 ENABLE_A11Y = --enable-a11y
+else
+ENABLE_A11Y =
 endif
 
 DEB_DH_STRIP_ARGS := --dbg-package=hildon-desktop
